# FooFit

./: CMakeLists.txt  README.md
examples/: CreateData.C
examples/fitting/: CreateData.C  README
examples/fitting/1d/: FitHist.C  FitTree.C  FitTreeBinned.C  FitTreeBinnedW.C  FitTreeHistPdf.C  FitTreeW.C
examples/fitting/2d/: FitHist.C  FitTree.C  FitTreeBinned.C  FitTreeHistPdf.C
examples/fitting/3d/: FitHist.C  FitTree.C  FitTreeBinned.C  FitTreeHistPdf.C
examples/splot/: README
examples/splot/1d/: Fit.C  FitW.C
include/: FFFooFit.h  FFRooFit.h  FFRooFitHist.h  FFRooFitTree.h  FFRooFitter.h  FFRooFitterBinned.h  FFRooFitterSPlot.h  FFRooFitterSpecies.h  FFRooFitterTree.h  FFRooFitterUnbinned.h  FFRooModel.h  FFRooModelChebychev.h  FFRooModelComp.h  FFRooModelExpo.h  FFRooModelGauss.h  FFRooModelGaussBifur.h  FFRooModelHist.h  FFRooModelKeys.h  FFRooModelLandau.h  FFRooModelPol.h  FFRooModelProd.h  FFRooModelSum.h  FFRooSPlot.h  LinkDef.h
src/: FFFooFit.cxx  FFRooFit.cxx  FFRooFitHist.cxx  FFRooFitTree.cxx  FFRooFitter.cxx  FFRooFitterBinned.cxx  FFRooFitterSPlot.cxx  FFRooFitterSpecies.cxx  FFRooFitterTree.cxx  FFRooFitterUnbinned.cxx  FFRooModel.cxx  FFRooModelChebychev.cxx  FFRooModelComp.cxx  FFRooModelExpo.cxx  FFRooModelGauss.cxx  FFRooModelGaussBifur.cxx  FFRooModelHist.cxx  FFRooModelKeys.cxx  FFRooModelLandau.cxx  FFRooModelPol.cxx  FFRooModelProd.cxx  FFRooModelSum.cxx  FFRooSPlot.cxx  htmldoc.C
